# websocket-benchmark

./: Makefile  README.md  docker-compose.yaml  go.work  go.work.sum  package-lock.json  package.json  websocket_benchmark.sh
benchmarks/: binary-async.js  binary-sync.js  connection.js  json-async.js  json-sync.js  plain-async.js  plain-sync.js  scenarios.js
frameworks/bun-websocket/: Dockerfile-binary  Dockerfile-json  Dockerfile-plain  binary.ts  bun.lockb  json.ts  package.json  plain.ts
frameworks/fasthttp-websocket/: go.mod  go.sum  server.go
frameworks/gorilla-websocket/: Dockerfile  go.mod  server.go
frameworks/sib/: Cargo.toml  Dockerfile
frameworks/sib/src/: main.rs
frameworks/tokio-tungstenite/: Cargo.toml  Dockerfile
frameworks/tokio-tungstenite/src/: main.rs
frameworks/uwebsocket-js/: Dockerfile  package-lock.json  package.json  server.js
frameworks/websocketpp/: CMakeLists.txt  Dockerfile  server.cpp
results/: binary-sync.txt  connection.txt
results/vus-128/bun-websocket/: connection.txt  json-async.txt  json-sync.txt
results/vus-128/fasthttp-websocket/: binary-async.txt  binary-sync.txt  connection.txt  json-async.txt  json-sync.txt  plain-async.txt  plain-sync.txt
results/vus-128/tokio-tungstenite/: binary-async.txt  binary-sync.txt  connection.txt  json-async.txt  json-sync.txt  plain-async.txt  plain-sync.txt
results/vus-128/uwebsocket-js/: binary-async.txt  binary-sync.txt  connection.txt  json-async.txt  json-sync.txt  plain-async.txt  plain-sync.txt
results/vus-16/bun-websocket/: binary-async.txt  binary-sync.txt  connection.txt  json-async.txt  json-sync.txt  plain-async.txt  plain-sync.txt
results/vus-16/fasthttp-websocket/: binary-async.txt  binary-sync.txt  connection.txt  json-async.txt  json-sync.txt  plain-async.txt  plain-sync.txt
results/vus-16/gorilla-websocket/: binary-async.txt  binary-sync.txt  connection.txt  json-async.txt  json-sync.txt  plain-async.txt  plain-sync.txt
results/vus-16/sib/: binary-async.txt  binary-sync.txt  connection.txt  json-async.txt  json-sync.txt  plain-async.txt  plain-sync.txt
results/vus-16/tokio-tungstenite/: binary-async.txt  binary-sync.txt  connection.txt  json-async.txt  json-sync.txt  plain-async.txt  plain-sync.txt
results/vus-16/uwebsocket-js/: binary-async.txt  binary-sync.txt  connection.txt  json-async.txt  json-sync.txt  plain-async.txt  plain-sync.txt
results/vus-16/websocketpp/: binary-async.txt  binary-sync.txt  connection.txt  json-async.txt  json-sync.txt  plain-async.txt  plain-sync.txt
results/vus-64/bun-websocket/: binary-async.txt  binary-sync.txt  connection.txt  json-async.txt  json-sync.txt  plain-async.txt  plain-sync.txt
results/vus-64/fasthttp-websocket/: binary-async.txt  binary-sync.txt  connection.txt  json-async.txt  json-sync.txt  plain-async.txt  plain-sync.txt
results/vus-64/gorilla-websocket/: binary-async.txt  binary-sync.txt  connection.txt  json-async.txt  json-sync.txt  plain-async.txt  plain-sync.txt
results/vus-64/tokio-tungstenite/: binary-async.txt  binary-sync.txt  connection.txt  json-async.txt  json-sync.txt  plain-async.txt  plain-sync.txt
results/vus-64/uwebsocket-js/: binary-async.txt  binary-sync.txt  connection.txt  json-async.txt  json-sync.txt  plain-async.txt  plain-sync.txt
results/vus-64/websocketpp/: binary-async.txt  binary-sync.txt  connection.txt  json-sync.txt  plain-sync.txt
src/: k6.js
src/proto/: message.proto  message.ts
