[package]
name = "sib-ws-bench"
version = "0.0.1"
authors = ["mail@pooya.ai"]
description = "A high-performance, secure, and cross-platform modules optimized for efficiency, scalability, and reliability."
documentation = "https://docs.rs/sib"
edition = "2024"
keywords = ["sib", "networking", "real-time", "streaming", "web"]
license = "Apache-2.0"
repository = "https://github.com/PooyaEimandar/sib"
categories = ["development-tools"]
readme = "README.md"

[dependencies]
sib = { version = "0.0.13", default-features = false, features = ["net-h1-server", "net-ws-server"] }
bytes = { version = "1.10.1", default-features = false }
http = { version = "1.3.1", default-features = false }
mimalloc = { version = "0.1.48", default-features = false, features = ["secure"] }
num_cpus = { version = "1.17.0", default-features = false }
serde = { version = "1.0.225", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false, features = ["std"] }

[profile.release]
opt-level = 3            # Consider "3" for max speed, but "z" gives small size & good cache perf
lto = true                # Full Link Time Optimization (best performance, slower build)
codegen-units = 1          # Forces whole-program optimization (slower compile, faster runtime)
panic = "abort"            # Smaller, faster code; no stack unwinding
strip = "symbols"          # Remove symbols for smaller binary and possibly faster load
debug = false              # Don't include debug info
incremental = false        # Disable incremental compilation in release