[package]
name = "tokio-tungstenite-benchmark"
version = "0.1.0"
authors = ["Jirawat Boonkumnerd <contact@ntsd.dev> (https://ntsd.dev)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
futures-channel = "0.3"
futures-util = "0.3"
log = "0.4.20"
serde_json = "1.0.108"
tokio = { version = "1.12.0", features = ["full"] }
tokio-tungstenite = "*"
