[package]
name = "tokio-tungstenite-benchmark"
version = "0.1.0"
authors = ["Jirawat Boonkumnerd <contact@ntsd.dev> (https://ntsd.dev)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
serde_json = "1.0.108"
tokio = { version = "1.12.0", features = ["full"] }
tokio-tungstenite = "*"
